--- a/CarDealership/CarDealership.csproj
+++ b/CarDealership/CarDealership.csproj
@@ -46,6 +46,9 @@
       <Compile Update="Forms\ManagerTablesForm.cs">
         <SubType>Form</SubType>
       </Compile>
+      <Compile Update="Forms\UpsertOrderForm.cs">
+        <SubType>Form</SubType>
+      </Compile>
     </ItemGroup>
 
 </Project>
